# libgnssconv

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  example.cpp  gnss_conversion.hpp  gnss_conversion.sln  libgnssconv.hpp  makefile
src/: example.cpp
test.vcxproj/: test.vcxproj  test.vcxproj.filters
